# rdev

./: Cargo.toml  Cross.toml  README.md
examples/: listen.rs  minimal_test.rs  raw_events.rs  serialize.rs  simulate.rs  synthetic_test.rs  test.rs
src/: codes_conv.rs  lib.rs  rdev.rs
src/keycodes/: macos_virtual_keycodes.rs  windows.rs
src/linux/: common.rs  grab.rs  keyboard.rs  listen.rs  simulate.rs
src/macos/: common.rs  display.rs  grab.rs  keyboard.rs  listen.rs  mod.rs  simulate.rs
src/windows/: common.rs  grab.rs  keyboard.rs  listen.rs  simulate.rs
tests/: listen_and_simulate.rs
